sno-after-install/templates/facility-manager-service/deployment-facility-manager-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facility-manager-service
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: facility-manager-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: facility-manager-service
        deploymentconfig: facility-manager-service
    spec:
      containers:
      - image: quay.io/qiotmanufacturing/factory-facility-manager
        imagePullPolicy: Always
        name: facility-manager-service
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: facility-manager-service
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: facility-manager-service
        name: facility-manager-service
