sno-after-install/templates/facility-manager-service/service-facility-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facility-manager-service
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: facility-manager-service
    deploymentconfig: facility-manager-service
  sessionAffinity: None
  type: ClusterIP
