sno-after-install/templates/facility-manager-service/route-facility-manager-service.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: facility-manager-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: facility-manager-service
    weight: 100
  wildcardPolicy: None
